Update title and SEO stuff.
Made the title more descriptive and tried to boost my Lighthouse score

--- a/css/master.css
+++ b/css/master.css
@@ -53,6 +53,12 @@ a:hover{
   position: relative;
 }
 
+.descript{
+  font-size: 2.5rem;
+  width: 45%;
+  margin: auto;
+}
+
 .skills{
   /* position: relative; */
   list-style: none;
