--- a/css/master.css
+++ b/css/master.css
@@ -6,14 +6,14 @@ body {
 }
 
 h1{
-  color: #66BFBF;
+  /* color: #66BFBF; no need */
   font-family: 'Sacramento', cursive;
   font-size: 5.625rem;
   margin: 50px auto 0 auto;
 }
 
 h2{
-  color: #66BFBF;
+  /* color: #66BFBF; no need*/
   font-family: 'Montserrat', sans-serif;
   font-size: 2.5rem;
   font-weight: normal;
@@ -51,6 +51,10 @@ a:hover{
   background-color: #e4f9f5;
   padding-top: 100px;
   position: relative;
+}
+
+.text, h2, h1{
+  color: #4e988b;
 }
 
 .descript{
@@ -112,13 +116,13 @@ a:hover{
 
 .top-cloud {
   position: absolute;
-  right: 300px;
+  right: 12vw;
   top: 40px;
 }
 
 .bottom-cloud{
   bottom: 300px;
-  left: 250px;
+  left: 9vw;
   position: absolute;
 }
 
