Add presentation with Neil

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -13,6 +13,7 @@ const year = new Date().getFullYear();
         <meta name="viewport" content="width=device-width, initial-scale=1" />
         <meta name="generator" content={Astro.generator} />
         <meta name="manifest" content="app.webmanifest" />
+        <link rel="icon" type="image/x-icon" href="/favicon.ico" />
         <title>Aarav Juneja</title>
     </head>
     <body>
@@ -20,7 +21,7 @@ const year = new Date().getFullYear();
             <nav class="navbar absolute">
                 <!-- Create Flex-1 dev to take over -->
                 <div class="flex-1 ml-3">
-                    <a href="/">Aarav Juneja</a>
+                    <a href="/" class="font-semibold text-lg">Aarav Juneja</a>
                 </div>
                 <ul class="menu menu-horizontal">
                     <li>
