--- a/src/components/Course.astro
+++ b/src/components/Course.astro
@@ -1,6 +1,6 @@
 ---
 const { title, description, image } = Astro.props;
-import Image from "astro/components/Image.astro";
+import { Image } from "astro:assets";
 ---
 
 <div class="flex flex-row m-2 my-5">
